--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
   "name": "genshin-gacha-export",
   "version": "0.0.1",
+  "main": "./src/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "electron ./src/main.js"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "echarts": "^5.0.2",
+    "electron-squirrel-startup": "^1.0.0",
     "element-plus": "^1.0.2-beta.32",
-    "exceljs": "^4.2.0",
     "fs-extra": "^9.1.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.54",
+    "@electron-forge/maker-deb": "^6.0.0-beta.54",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
+    "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.4",
@@ -23,5 +30,36 @@
     "postcss": "^8.2.5",
     "tailwindcss": "^2.0.3",
     "vite": "^2.0.0-beta.65"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "ignore": [
+          "src/(renderer)",
+          "(\\.vscode)",
+          "node_modules/(\\.vite|@.+|element-plus|vue)"
+        ],
+        "icon": "src/assets/fish.ico",
+        "name": "原神抽卡数据导出"
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "win32"
+          ]
+        }
+      ],
+      "publishers": {
+        "name": "@electron-forge/publisher-github",
+        "config": {
+          "repository": {
+            "owner": "biuuu",
+            "name": "genshin-gacha-export"
+          },
+          "prerelease": true
+        }
+      }
+    }
   }
 }
