--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "genshin-gacha-export",
-  "version": "0.0.1",
+  "name": "genshin-gacha-export-electron",
+  "version": "0.0.2",
   "main": "./src/main.js",
   "scripts": {
     "dev": "vite",
