--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
           "(\\.vscode)",
           "node_modules/(\\.vite|@.+|element-plus|vue|lodash)"
         ],
-        "icon": "src/assets/fish.ico",
-        "name": "原神抽卡数据导出"
+        "name": "Genshin Gacha Export"
       },
       "makers": [
         {
