--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genshin-gacha-export-electron",
-  "version": "0.0.8-beta",
+  "version": "0.0.8-beta.1",
   "main": "./src/main.js",
   "scripts": {
     "dev": "vite",
@@ -12,22 +12,23 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "fs-extra": "^9.1.0"
+    "fs-extra": "^9.1.0",
+    "ssl-root-cas": "^1.3.1"
   },
   "devDependencies": {
-    "vue": "^3.0.5",
-    "lodash-es": "^4.17.20",
-    "element-plus": "^1.0.2-beta.32",
-    "electron-squirrel-startup": "^1.0.0",
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.4",
     "electron": "^11.2.3",
+    "electron-squirrel-startup": "^1.0.0",
+    "element-plus": "^1.0.2-beta.32",
+    "lodash-es": "^4.17.20",
     "postcss": "^8.2.5",
     "tailwindcss": "^2.0.3",
-    "vite": "^2.0.0-beta.65"
+    "vite": "^2.0.0-beta.65",
+    "vue": "^3.0.5"
   },
   "config": {
     "forge": {
