--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genshin-gacha-export-electron",
-  "version": "0.0.8-beta.2",
+  "version": "0.0.8-beta.3",
   "main": "./src/main.js",
   "scripts": {
     "dev": "vite",
@@ -11,9 +11,8 @@
     "make": "electron-forge make"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "fs-extra": "^9.1.0",
-    "ssl-root-cas": "^1.3.1"
+    "electron-fetch": "^1.7.3",
+    "fs-extra": "^9.1.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
