--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash-es": "^4.17.20",
     "postcss": "^8.2.5",
     "tailwindcss": "^2.0.3",
-    "vite": "^2.0.0-beta.65",
+    "vite": "^2.0.1",
     "vue": "^3.0.5"
   },
   "config": {
