feat: build asar update with Github Actions

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "publish": "electron-forge publish",
+    "build-update": "node ./build/update.js"
   },
   "dependencies": {
     "electron-fetch": "^1.7.3",
@@ -24,6 +25,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
+    "adm-zip": "^0.5.3",
     "autoprefixer": "^10.2.4",
     "echarts": "^5.0.2",
     "electron": "^11.2.3",
