--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 jobs:
   main:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout
