fix: missing vite build

--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Build Update
       run: |
         yarn --frozen-lockfile
+        yarn build
         yarn package
         yarn build-update
     - name: Deploy
