调整组织架构

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
-node_modules
 .DS_Store
-dist
-dist-ssr
-*.local
-.vscode
-out/
+node_modules/
+build/win-unpacked/
+build/win-ia32-unpacked/
+dist/electron/main
+dist/electron/renderer
+dist/web
 userData
-update-dev
-update
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
