--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "genshin-gacha-export-electron",
   "version": "0.2.4",
   "main": "./dist/electron/main/main.js",
-  "author": "sky <https://github.com/umbrella22>",
+  "author": "biuuu <https://github.com/biuuu>",
   "license": "MIT",
   "scripts": {
     "dev": "node .electron-vite/dev-runner.js",
@@ -13,10 +13,15 @@
     "build:dir": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --dir",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vite/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vite/build.js",
+    "build:update": "node .electron-vite/update.js",
     "dep:upgrade": "yarn upgrade-interactive --latest",
     "postinstall": "electron-builder install-app-deps"
   },
   "build": {
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
     "asar": false,
     "extraFiles": [],
     "publish": [
@@ -77,7 +82,7 @@
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/node": "^14.14.31",
     "@vitejs/plugin-vue": "^1.1.5",
-    "@vue/compiler-sfc": "^3.0.6",
+    "@vue/compiler-sfc": "^3.0.7",
     "adm-zip": "^0.5.3",
     "autoprefixer": "^10.2.4",
     "cfonts": "^2.9.1",
@@ -86,7 +91,7 @@
     "del": "^6.0.0",
     "echarts": "^5.0.2",
     "electron": "^11.3.0",
-    "electron-builder": "^22.9.1",
+    "electron-builder": "^22.10.5",
     "electron-devtools-installer": "^3.1.1",
     "element-plus": "^1.0.2-beta.32",
     "lodash-es": "^4.17.21",
