--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/node": "^14.14.31",
-    "@vitejs/plugin-vue": "^1.1.5",
+    "@vitejs/plugin-vue": "1.1.5",
     "@vue/compiler-sfc": "^3.0.7",
     "adm-zip": "^0.5.3",
     "autoprefixer": "^10.2.4",
@@ -102,7 +102,7 @@
     "postcss": "^8.2.6",
     "rollup-plugin-esbuild": "^2.6.1",
     "tailwindcss": "^2.0.3",
-    "vite": "^2.0.4",
+    "vite": "2.0.3",
     "vue": "^3.0.6",
     "vue-router": "^4.0.4",
     "vuex": "^4.0.0"
