--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/win-unpacked/
 build/win-ia32-unpacked/
 build/Genshin Gacha Export Setup 0.2.4.exe
 build/Genshin Gacha Export Setup 0.2.4.exe.blockmap
+build/*.zip
+build/update/
 build/builder-debug.yml
 build/latest.yml
 build/builder-effective-config.yaml
