--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "genshin-gacha-export-electron",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "main": "./dist/electron/main/main.js",
   "author": "biuuu <https://github.com/biuuu>",
   "license": "MIT",
   "scripts": {
     "dev": "node .electron-vite/dev-runner.js",
+    "dev:web": "cross-env TARGET=web node .electron-vite/dev-runner.js",
     "build": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder",
     "build:win32": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --win  --ia32",
     "build:win64": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --win  --x64",
@@ -101,7 +102,7 @@
     "semver": "^7.3.4",
     "tailwindcss": "^2.0.3",
     "vite": "2.0.5",
-    "vue": "^3.0.6",
+    "vue": "^3.0.7",
     "vue-router": "^4.0.4",
     "vuex": "^4.0.0",
     "winreg": "^1.2.4",
