--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genshin-gacha-export-electron",
-  "version": "0.4.4",
+  "version": "0.5.0",
   "main": "./dist/electron/main/main.js",
   "author": "biuuu <https://github.com/biuuu>",
   "license": "MIT",
@@ -94,6 +94,7 @@
     "get-stream": "^6.0.0",
     "lodash-es": "^4.17.21",
     "minimist": "^1.2.5",
+    "moment": "^2.29.1",
     "multispinner": "^0.2.1",
     "ora": "^5.3.0",
     "portfinder": "^1.0.28",
