--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "genshin-gacha-export-electron",
-  "version": "0.5.5",
+  "name": "genshin-wish-export",
+  "version": "0.5.6",
   "main": "./dist/electron/main/main.js",
   "author": "biuuu <https://github.com/biuuu>",
   "license": "MIT",
@@ -31,8 +31,8 @@
         "url": "http://127.0.0.1"
       }
     ],
-    "productName": "Genshin Gacha Export",
-    "appId": "org.biuuu.genshin-gacha-export",
+    "productName": "Genshin Wish Export",
+    "appId": "org.biuuu.genshin-wish-export",
     "directories": {
       "output": "build"
     },
