--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build in multiple platforms
+name: Build
 
 on:
   workflow_dispatch:
@@ -6,11 +6,34 @@ on:
     branches: [ main ]
 
 jobs:
-  main:
+  build-update:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Build Update
+        run: |
+          yarn --frozen-lockfile
+          yarn build:dir
+          yarn build-update
+      - name: Deploy
+        if: success()
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          commit_message: Update app
+          build_dir: ./build/update
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build-package:
     runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [ windows-latest, ubuntu-latest, macos-latest ]
 
     steps:
       - name: Checkout
@@ -24,8 +47,20 @@ jobs:
           yarn --frozen-lockfile
           yarn build
       - uses: actions/upload-artifact@v2
+        name: "Upload package for ${{ matrix.os }}"
+        if: matrix.os == 'windows-latest'
         with:
-          name: "Build ${{ matrix.os }}"
-          path: |
-            build/Genshin*zip
-            build/Genshin*deb
+          name: "${{ matrix.os }} package"
+          path: build/Genshin*zip
+      - uses: actions/upload-artifact@v2
+        name: "Upload package for ${{ matrix.os }}"
+        if: matrix.os == 'ubuntu-latest'
+        with:
+          name: "${{ matrix.os }} package"
+          path: build/Genshin*deb
+      - uses: actions/upload-artifact@v2
+        name: "Upload package for ${{ matrix.os }}"
+        if: matrix.os == 'macos-latest'
+        with:
+          name: "${{ matrix.os }} package"
+          path: build/Genshin*dmg
