fix(package): 修正命令执行顺序问题

--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "license": "MIT",
   "scripts": {
     "dev": "node .electron-vite/dev-runner.js",
+    "build": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder",
+    "build:win32": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder --win  --ia32",
+    "build:win64": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder --win  --x64",
+    "build:linux": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && electron-builder --linux",
+    "build:mac": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder --mac",
+    "build:dir": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder --dir",
+    "build:clean": "cross-env BUILD_TARGET=onlyClean node .electron-vite/build.js",
+    "build:web": "cross-env BUILD_TARGET=web node .electron-vite/build.js",
     "dev:web": "cross-env TARGET=web node .electron-vite/dev-runner.js",
     "start": "electron ./src/main/main.js",
-    "build": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder",
-    "build:win32": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --win  --ia32",
-    "build:win64": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --win  --x64",
-    "build:mac": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --mac",
-    "build:linux": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --linux",
-    "build:dir": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --dir",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vite/build.js",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vite/build.js",
     "build-update": "node .electron-vite/update.js",
     "dep:upgrade": "yarn upgrade-interactive --latest",
     "postinstall": "electron-builder install-app-deps"
