--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "license": "MIT",
   "scripts": {
     "dev": "node .electron-vite/dev-runner.js",
+    "build": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder",
+    "build:win32": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder --win  --ia32",
+    "build:win64": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder --win  --x64",
+    "build:linux": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && electron-builder --linux",
+    "build:mac": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder --mac",
+    "build:dir": "cross-env BUILD_TARGET=clean node .electron-vite/build.js  && electron-builder --dir",
+    "build:clean": "cross-env BUILD_TARGET=onlyClean node .electron-vite/build.js",
+    "build:web": "cross-env BUILD_TARGET=web node .electron-vite/build.js",
     "dev:web": "cross-env TARGET=web node .electron-vite/dev-runner.js",
     "start": "electron ./src/main/main.js",
-    "build": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder",
-    "build:win32": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --win  --ia32",
-    "build:win64": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --win  --x64",
-    "build:mac": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --mac",
-    "build:linux": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --linux",
-    "build:dir": "cross-env BUILD_TARGET=clean node .electron-vite/build.js && node .electron-vite/build.js && electron-builder --dir",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vite/build.js",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vite/build.js",
     "build-update": "node .electron-vite/update.js",
     "dep:upgrade": "yarn upgrade-interactive --latest",
     "postinstall": "electron-builder install-app-deps"
@@ -70,41 +70,40 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-commonjs": "^17.1.0",
+    "@element-plus/icons-vue": "^0.2.6",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@types/electron-devtools-installer": "^2.2.0",
-    "@types/node": "^14.14.31",
-    "@vitejs/plugin-vue": "1.1.5",
-    "@vue/compiler-sfc": "^3.0.7",
-    "adm-zip": "^0.5.3",
-    "autoprefixer": "^10.2.4",
-    "cfonts": "^2.9.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/node": "^17.0.10",
+    "@vitejs/plugin-vue": "2.1.0",
+    "@vue/compiler-sfc": "^3.2.29",
+    "adm-zip": "^0.5.9",
+    "autoprefixer": "^10.4.2",
+    "cfonts": "^2.10.0",
     "chalk": "^4.1.0",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
-    "echarts": "^5.0.2",
-    "electron": "^12.0.0",
-    "electron-builder": "^22.10.5",
-    "electron-devtools-installer": "^3.1.1",
-    "electron-fetch": "^1.7.3",
+    "echarts": "^5.2.2",
+    "electron": "^16.0.7",
+    "electron-builder": "^22.14.5",
+    "electron-fetch": "^1.7.4",
     "electron-unhandled": "^3.0.2",
     "electron-window-state": "^5.0.3",
-    "element-plus": "^1.0.2-beta.33",
-    "fs-extra": "^9.1.0",
-    "get-stream": "^6.0.0",
+    "element-plus": "^1.3.0-beta.7",
+    "fs-extra": "^10.0.0",
+    "get-stream": "^6.0.1",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
     "multispinner": "^0.2.1",
     "ora": "^5.3.0",
     "portfinder": "^1.0.28",
-    "postcss": "^8.2.6",
-    "rollup-plugin-esbuild": "^2.6.1",
-    "semver": "^7.3.4",
-    "tailwindcss": "^2.0.3",
-    "vite": "2.0.5",
-    "vue": "^3.0.7",
+    "postcss": "^8.4.5",
+    "rollup-plugin-esbuild": "^4.8.2",
+    "semver": "^7.3.5",
+    "tailwindcss": "^3.0.16",
+    "vite": "2.7.13",
+    "vue": "^3.2.29",
     "winreg": "^1.2.4",
     "yauzl": "^2.10.0"
   },
