--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     },
     "mac": {
       "icon": "build/icons/icon.icns",
-      "target" : { "target": "dmg", "arch": "arm64" }
+      "target": {
+        "target": "dmg",
+        "arch": "arm64"
+      }
     },
     "win": {
       "icon": "build/icons/icon.ico",
@@ -69,7 +72,6 @@
       "icon": "build/icons"
     }
   },
-  "dependencies": {},
   "devDependencies": {
     "@element-plus/icons-vue": "^0.2.6",
     "@rollup/plugin-alias": "^3.1.9",
