--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           yarn build
         env:
           CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
-          CSC_LINK: ${{ secrets.CSC_LINK }}
+          CSC_LINK: certs/mac.p12
       - uses: actions/upload-artifact@v2
         name: "Upload package for ${{ matrix.os }}"
         if: matrix.os == 'windows-latest'
