--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
       "icon": "build/icons"
     }
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "@element-plus/icons-vue": "^0.2.6",
     "@rollup/plugin-alias": "^3.1.9",
@@ -86,7 +87,7 @@
     "del": "^6.0.0",
     "echarts": "^5.2.2",
     "electron": "^16.0.7",
-    "electron-builder": "^22.14.5",
+    "electron-builder": "^23.0.2",
     "electron-fetch": "^1.7.4",
     "electron-unhandled": "^3.0.2",
     "electron-window-state": "^5.0.3",
