--- a/package.json
+++ b/package.json
@@ -68,43 +68,41 @@
       "icon": "build/icons"
     }
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@element-plus/icons-vue": "^0.2.6",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/node": "^17.0.10",
-    "@vitejs/plugin-vue": "2.1.0",
-    "@vue/compiler-sfc": "^3.2.29",
-    "adm-zip": "^0.5.9",
-    "autoprefixer": "^10.4.2",
+    "@element-plus/icons-vue": "^2.1.0",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-commonjs": "^25.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@types/node": "^20.3.1",
+    "@vitejs/plugin-vue": "4.2.3",
+    "@vue/compiler-sfc": "^3.3.4",
+    "adm-zip": "^0.5.10",
+    "autoprefixer": "^10.4.14",
     "cfonts": "^2.10.0",
     "chalk": "^4.1.0",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
-    "echarts": "^5.2.2",
-    "electron": "^16.0.7",
-    "electron-builder": "^23.0.2",
-    "electron-fetch": "^1.7.4",
-    "electron-unhandled": "^3.0.2",
+    "echarts": "^5.4.2",
+    "electron": "^22.3.13",
+    "electron-builder": "^24.4.0",
+    "electron-fetch": "^1.9.1",
+    "electron-unhandled": "^4.0.1",
     "electron-window-state": "^5.0.3",
-    "element-plus": "^1.3.0-beta.7",
-    "fs-extra": "^10.0.0",
-    "get-stream": "^6.0.1",
+    "element-plus": "^2.3.6",
+    "fs-extra": "^11.1.1",
+    "get-stream": "^7.0.0",
     "lodash-es": "^4.17.21",
-    "moment": "^2.29.1",
     "multispinner": "^0.2.1",
     "ora": "^5.3.0",
-    "portfinder": "^1.0.28",
-    "postcss": "^8.4.5",
-    "rollup-plugin-esbuild": "^4.8.2",
-    "semver": "^7.3.5",
-    "tailwindcss": "^3.0.16",
-    "vite": "2.7.13",
-    "vue": "^3.2.29",
+    "portfinder": "^1.0.32",
+    "postcss": "^8.4.24",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "semver": "^7.5.2",
+    "tailwindcss": "^3.3.2",
+    "vite": "4.3.9",
+    "vue": "^3.3.4",
     "winreg": "^1.2.4",
     "yauzl": "^2.10.0"
   },
