--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genshin-wish-export",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "main": "./dist/electron/main/main.js",
   "author": "biuuu <https://github.com/biuuu>",
   "license": "MIT",
@@ -68,8 +68,7 @@
       "icon": "build/icons"
     }
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@element-plus/icons-vue": "^0.2.6",
     "@rollup/plugin-alias": "^3.1.9",
@@ -94,6 +93,7 @@
     "element-plus": "^1.3.0-beta.7",
     "fs-extra": "^10.0.0",
     "get-stream": "^6.0.1",
+    "glob": "^10.3.1",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
     "multispinner": "^0.2.1",
