--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "dependencies": {},
   "devDependencies": {
     "@element-plus/icons-vue": "^0.2.6",
+    "@octokit/core": "^5.0.0",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
