--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.9.1",
   "main": "./dist/electron/main/main.js",
   "author": "biuuu <https://github.com/biuuu>",
+  "homepage": "https://github.com/biuuu/genshin-wish-export",
   "license": "MIT",
   "scripts": {
     "dev": "node .electron-vite/dev-runner.js",
