--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Use Node.js
-        - uses: actions/setup-node@v3
-          with:
-            node-version: 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Build App
         run: |
           yarn --frozen-lockfile
